--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
 <script src="//code.jquery.com/jquery.min.js"></script>
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@hmert">
+<meta name="twitter:creator" content="@hmert">
+<meta name="twitter:title" content="UNSTAR">
+<meta name="twitter:description" content="Any time of the day is a good time for unstar. Use this as bookmarklet for stared repos and unstar">
+<meta name="twitter:image:src" content="http://i.imgur.com/DUmLt4D.png?1">
+
+
   <meta charset="utf-8">
 <style id="jsbin-css">
 body{
