twitter card FİX

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@hmert">
 <meta name="twitter:creator" content="@hmert">
-<meta name="twitter:title" content="UNSTAR">
+<meta name="twitter:title" content="UNSTAR GITHUB REPOS">
 <meta name="twitter:description" content="Any time of the day is a good time for unstar. Use this as bookmarklet for stared repos and unstar">
 <meta name="twitter:image:src" content="http://i.imgur.com/DUmLt4D.png?1">
 
